syntax = "proto3";

package regsiterpb;

import "google/api/annotations.proto";

message Location{
    double lat = 1;
    double lan = 2;
    string address = 3;
}

message RegisterUserRequest{
    string phone = 1;
    string first_name = 2;
    string last_name = 3;
    string company_name = 4;
    string country_code = 5;
    Location location  = 6;
    string user_name = 7;
    string email = 8;
    string password = 9;
}

message RegisterUserResponse{
    string message = 1;
    int32 code = 2;
    string access_token = 3;
}


service RegisterService{
    rpc RegisterUserService (RegisterUserRequest) returns (RegisterUserResponse){
        option (google.api.http) = {
            post: "/v1/user/register/{phone}"
            body: "*"
		};
    }
}